tests/mypy/mypy_function_wrapper_fn_t3.out
tests/mypy/mypy_function_wrapper_fn_t3.py:20: error: Argument 1 to "function_wrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[Callable[[VarArg(Any), KwArg(Any)], Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 1 error in 1 file (checked 1 source file)
